kustomize/overlays/dev/search/title-translation/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: title-translation
  labels:
    app: title-translation
    stage: staging
spec:
  selector:
    matchLabels:
      app: title-translation
      stage: staging
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-staging
      labels:
        app: title-translation
        stage: staging
